--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -7,5 +7,14 @@
     margin-right: 60px;
     padding: 4px 20px 4px 2px;
 }
+.cart-badge{
+    
+    height: 20px;
+    width: 20px auto;
+}
+.cart-logo{
+    width: 30px;
+    height: 30px;
+}
 
 
