--- a/src/components/ProductStyle.css
+++ b/src/components/ProductStyle.css
@@ -1,3 +1,47 @@
-.card{
-    width: 18rem;
+.product-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+}
+
+.card {
+  margin: 10px;
+  flex: 1 1 calc(33.333% - 20px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
+  border-radius: 10px;
+}
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 1);
+}
+
+.card img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+  height: 200px;
+  padding-top: 4px;
+}
+
+.card-body {
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .card {
+    flex: 1 1 calc(50% - 20px);
+  }
+}
+
+@media (max-width: 480px) {
+  .card {
+    flex: 1 1 calc(100% - 20px);
+  }
+
+  .card img {
+    width: 150px;
+    height: 150px;
+  }
 }
