--- a/src/routes/CartStyles.css
+++ b/src/routes/CartStyles.css
@@ -1,80 +1,106 @@
-/* CartStyles.css */
-
 .cart-container {
-    padding: 20px;
-  }
+  padding: 20px;
   
-  .cart-title {
-    font-size: 2rem;
-    margin-bottom: 20px;
-  }
-  
-  .cart-list {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
+}
+
+.cart-title {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.cart-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; 
+}
+
+.cart-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 10px;
+  width: calc(33.333% - 20px); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
+  text-align: center;
+}
+
+
+.cart-item img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 150px; 
+  height: 150px;
+  object-fit: contain;
+  margin-bottom: 15px;
+}
+
+.cart-item-details {
+  text-align: center;
+  margin-bottom: 10px;
+  flex: 1; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.cart-item-title {
+  font-size: 1.2rem;
+  margin: 0;
+  margin-bottom: 5px;
+  height: 2.4em; 
+  overflow: hidden;
+}
+
+.cart-item-description {
+  font-size: 0.9rem;
+  margin: 0;
+  margin-bottom: 5px;
+  max-height: 3.6em; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cart-item-price {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.cart-item-remove {
+  background-color: #ccc;
+  color: #000;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.cart-item-remove:hover {
+  background-color: #bbb;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
   .cart-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 20px;
-    margin: 10px;
-    width: calc(33.333% - 40px); /* Adjust according to the desired width */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    flex: 1 1 calc(50% - 20px); 
   }
-  
+}
+
+@media (max-width: 480px) {
+  .cart-item {
+    flex: 1 1 calc(100% - 20px); 
+  }
+
   .cart-item img {
-    width: 100px;
+    width: 100px; 
     height: 100px;
-    object-fit: cover;
-    margin-bottom: 15px;
   }
-  
-  .cart-item-details {
-    text-align: center;
-    margin-bottom: 10px;
-  }
-  
-  .cart-item-title {
-    font-size: 1.2rem;
-    margin: 0;
-    margin-bottom: 5px;
-  }
-  
-  .cart-item-description {
-    font-size: 0.9rem;
-    margin: 0;
-    margin-bottom: 5px;
-    max-height: 3.6em; /* Limit the height to 3 lines (1.2em per line) */
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3; /* Number of lines to show */
-    -webkit-box-orient: vertical;
-  }
-  
-  .cart-item-price {
-    font-size: 1rem;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .cart-item-remove {
-    background-color: #ccc;
-    color: #000;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .cart-item-remove:hover {
-    background-color: #bbb;
-  }
-  
+}
